syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./pb";

service CategoryService {
  rpc FindAll (google.protobuf.Empty) returns (ListCategoryResponse) {}
  rpc FindByID (GetCategoryByIDRequest) returns (GetCategoryResponse) {}
  rpc Create (CreateCategoryRequest) returns (GetCategoryResponse) {}
  rpc Delete (GetCategoryByIDRequest) returns (google.protobuf.Empty) {}
}

message Category {
  int64 id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message ListCategoryResponse {
  repeated Category categories = 1;
}

message GetCategoryResponse {
  Category category = 1;
}

message GetCategoryByIDRequest {
  int64 id = 1;
}

message CreateCategoryRequest {
  string name = 1;
}
